--- a/templates/default.html.twig
+++ b/templates/default.html.twig
@@ -311,14 +311,30 @@
         <div class="container-fluid">
 
             {% for flashMessage in app.session.flashbag.get('error') %}
-                <div class="bg-danger">
-                    {{ flashMessage }}
-                </div>
+            <div class="alert alert-danger alert-dismissible fade show" role="alert">
+                {{ flashMessage }}
+                <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+                  <span aria-hidden="true">&times;</span>
+                </button>
+            </div>
             {% endfor %}
+            
             {% for flashMessage in app.session.flashbag.get('success') %}
-                <div class="bg-success">
-                    {{ flashMessage }}
-                </div>
+            <div class="alert alert-success alert-dismissible fade show" role="alert">
+                {{ flashMessage }}
+                <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+                  <span aria-hidden="true">&times;</span>
+                </button>
+            </div>
+            {% endfor %}
+            
+            {% for flashMessage in app.session.flashbag.get('warning') %}
+            <div class="alert alert-warning alert-dismissible fade show" role="alert">
+                {{ flashMessage }}
+                <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+                  <span aria-hidden="true">&times;</span>
+                </button>
+            </div>
             {% endfor %}
             
           <!-- Page Heading -->
