--- a/templates/voyage/view.html.twig
+++ b/templates/voyage/view.html.twig
@@ -99,6 +99,13 @@
                 </div>
                 <div class="card-body">
                     <div id="calendar" data-events='{{events|raw}}' data-default-date="{{voyage.dateDeb|date('Y-m-d')}}"></div>
+                    <div class="row">
+                        {% for categorie in categories %}
+                            <div class="col-sm">
+                                <i class="fas fa-circle" style="color: {{categorie.couleur}}"></i> {{categorie.libelle}}
+                            </div>
+                        {% endfor %}
+                    </div>
                 </div>
             </div>
         </div>
@@ -132,8 +139,8 @@
                 <p>Description : <span id="eventDescription"></span></p>
             </div>
             <div class="modal-footer">
-              <button type="button" class="btn btn-secondary" data-dismiss="modal">Fermer</button>
-              <a href="#" type="button" class="btn btn-danger">Supprimer</a>
+                <a href="#" type="button" class="btn btn-danger">Supprimer</a>
+                <button type="button" class="btn btn-secondary" data-dismiss="modal">Fermer</button>
             </div>
           </div>
         </div>
