--- a/templates/voyage/view.html.twig
+++ b/templates/voyage/view.html.twig
@@ -134,9 +134,14 @@
               </button>
             </div>
             <div class="modal-body">
-                <p>Début : <span id="eventStart"></span></p>
-                <p>Fin : <span id="eventEnd"></span></p>
-                <p>Description : <span id="eventDescription"></span></p>
+                <dl class="row">
+                    <dt class="col-sm-3">Début</dt>
+                    <dd class="col-sm-9" id="eventStart"></dd>
+                    <dt class="col-sm-3">Fin</dt>
+                    <dd class="col-sm-9" id="eventEnd"></dd>
+                    <dt class="col-sm-3">Description</dt>
+                    <dd class="col-sm-9" id="eventDescription"></dd>
+                </dl>
             </div>
             <div class="modal-footer">
                 <a href="#" type="button" class="btn btn-danger">Supprimer</a>
