Ajout du background color sur etapes

--- a/templates/main/index.html.twig
+++ b/templates/main/index.html.twig
@@ -2,7 +2,7 @@
 
 {% block title %}Accueil{% endblock %}
 
-{% block titlePage %}Acceuil{% endblock %}
+{% block titlePage %}Accueil{% endblock %}
 
 {% block content %}
 
