--- a/templates/voyage/Theme/activite-theme.html.twig
+++ b/templates/voyage/Theme/activite-theme.html.twig
@@ -25,7 +25,6 @@
             {{form_widget(form.description, {'attr':{'class':'form-control', 'placeholder':"Ajoutez une description, des détails ..."}})}}
         </div>
     </div>
-        <a href="#" class="collection-remove btn btn-danger"><i class="fas fa-minus-circle"></i></a>
-    {{form_widget(form.description)}}
+        <a href="#" class="activite-remove btn btn-danger"><i class="fas fa-minus-circle"></i></a>
     {{ form_widget(form) }}
 {% endblock %}
