--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -12,3 +12,7 @@
     background-image: url("https://images.unsplash.com/photo-1529736576495-1ed4a29ca7e1?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=2552&q=80");
     background-position: 0;
 }
+
+.fc-bgevent{
+    color: black;
+}
