--- a/templates/default.html.twig
+++ b/templates/default.html.twig
@@ -22,7 +22,7 @@
       <li class="nav-item active">
         <a class="nav-link" href="{{path('app_main_index')}}">
           <i class="fas fa-igloo"></i>
-          <span>Acceuil</span></a>
+          <span>Accueil</span></a>
       </li>
 
       <!-- Divider -->
